exercices/monitoring/route-user-workload.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  name: prometheus-user
  namespace: openshift-user-workload-monitoring
spec:
  host: prometheus-user-openshift-monitoring.apps-crc.testing
  port:
    targetPort: metrics
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: prometheus-user-workload
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: prometheus-user-openshift-monitoring.apps-crc.testing
    routerCanonicalHostname: apps-crc.testing
    routerName: default
    wildcardPolicy: None
